--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap");
+
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Nunito Sans", sans-serif;
+  background: var(--background);
 }
 
 a {
@@ -11,11 +11,54 @@ a {
   text-decoration: none;
 }
 
-* {
+:root {
+  --background: hsl(0, 0%, 98%);
+  --primary: hsl(0, 0%, 100%);
+  --primary-alt: hsl(0, 0%, 90%);
+  --text: hsl(200, 15%, 8%);
+  --text-alt: hsl(0, 0%, 52%);
+}
+
+[data-theme="dark"] {
+  --background: hsl(207, 26%, 17%);
+  --primary: hsl(209, 23%, 22%);
+  --primary-alt: hsl(209, 23%, 30%);
+  --text: hsl(0, 0%, 100%);
+  --text-alt: hsl(0, 0%, 100%);
+}
+
+main {
+  max-width: 1280px;
+  margin-inline: auto;
+}
+
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+input {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 19px 0px;
+}
+
+button,
+select {
+  cursor: pointer;
+  background-color: var(--primary);
+  border: none;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  transition: all 200ms ease;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 10px 29px 0px;
+}
+button:hover {
+  background-color: var(--primary-alt);
+}
+
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +66,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
